# finnic-runosong

./: .env.example  .gitignore  README.md  hackathon_report.md  pyproject.toml
data/: cluster_group_members.parquet  poem_2_gram_occurrences.parquet  poem_3_gram_occurrences.parquet  poem_4_gram_occurrences.parquet  poem_5_gram_occurrences.parquet  poem_6_gram_occurrences.parquet  template_edges.parquet  template_mobility.parquet  template_slot_stability.parquet  templates.parquet
finnic_runosong/: __init__.py  db.py
finnic_runosong/build_templates/: __init__.py  __main__.py  analysis.py  config.py  groups.py  sequences.py
